--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 !/tmp/storage/.keep
 
 /public/assets
+/vendor/*
+/.env
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
